Accomodated text align on areaTable. Added background color to colorRamp. Fixed stroke color on polygon bug

--- a/client/src/components/Atoms/AreaTable/areaTable.css
+++ b/client/src/components/Atoms/AreaTable/areaTable.css
@@ -34,7 +34,7 @@
 
 .class-areas-table td {
     padding: 8px 16px;
-    text-align: left;
+    text-align: right;
     border-bottom: 1px solid #ddd;
 }
 
